# dagster-demo

./: .gitignore  AIRFLOW_COMPARISON.md  AZURE_DEPLOYMENT_PLAN.md  DAGSTER_UI_GUIDE.md  FACTORY_PATTERN.md  Makefile  README.md  WINDOWS_FRIEND_GUIDE.md  WINDOWS_SETUP_GUIDE.md  pyproject.toml  workspace.yaml
config/: example_pipeline.yaml
my-project/src/my_project/: __init__.py  definitions.py
src/data_marts/: __init__.py  definitions.py
src/data_marts/config/: marts.yaml  user_analytics_mart.yaml
src/data_marts/defs/: __init__.py  assets.py
src/ingestion_pipelines/: definitions.py
src/ingestion_pipelines/config/: albums_pipeline.yaml  sample_pipeline.yaml
src/ingestion_sample/: definitions.py
src/ingestion_sample/defs/: __init__.py  assets.py  schedules.py
src/ingestion_sample/factories/: README.md  __init__.py  asset_builder.py
src/my_project/defs/: __init__.py
src/shared/factories/: __init__.py  asset_builder.py
