[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion_sample"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-webserver",
    "pandas",
    "requests",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
