[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-demo"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-webserver",
    "pandas",
    "requests",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
